// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with no ranked info 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-5"
  >
    <img
      alt="UNRANKED"
      className="makeStyles-img-1 makeStyles-imgFlex-3"
      src="Emblem_Unranked.png"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-justify-xs-center MuiGrid-grid-xs-7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
    >
      Ranked Solo
    </p>
    <h5
      className="MuiTypography-root makeStyles-heading-4 makeStyles-headingFlex-6 MuiTypography-h5 MuiTypography-alignCenter"
    >
      Unranked
    </h5>
  </div>
</div>
`;

exports[`with ranked flex info 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-5"
  >
    <img
      alt="SILVER"
      className="makeStyles-img-1 makeStyles-imgFlex-3"
      src="Emblem_Silver.png"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-justify-xs-center MuiGrid-grid-xs-7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
    >
      Ranked Flex
    </p>
    <h5
      className="MuiTypography-root makeStyles-heading-4 makeStyles-headingFlex-6 MuiTypography-h5 MuiTypography-alignCenter"
    >
      SILVER I / 77 LP
    </h5>
    <p
      className="MuiTypography-root  makeStyles-textFlex-7 MuiTypography-body2 MuiTypography-alignCenter"
    >
      49% WR | 397 games
    </p>
  </div>
</div>
`;

exports[`with ranked solo info 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-5"
  >
    <img
      alt="GOLD"
      className="makeStyles-img-1 makeStyles-imgSolo-2"
      src="Emblem_Gold.png"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-justify-xs-center MuiGrid-grid-xs-7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
    >
      Ranked Solo
    </p>
    <h5
      className="MuiTypography-root makeStyles-heading-4 makeStyles-headingSolo-5 MuiTypography-h5 MuiTypography-alignCenter"
    >
      GOLD I / 15 LP
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
    >
      48% WR | 423 games
    </p>
  </div>
</div>
`;
